--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "typeorm": "^0.3.20"
   }
 }
