--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,13 +8,16 @@
     "build:watch": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "start": "node dist/index.js",
+    "start:watch": "nodemon dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
     "typescript": "^5.4.3"
   },
   "dependencies": {
