Run CI script in back-end directory

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,6 +4,9 @@ jobs:
   ci:
     name: Build and test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./back-end
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
