--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   }
